# Master

./: .gitignore  README.md
CC-II/Trabajo/: pres-CloudComputing.key
DSS/Ejercicios/: ModeloEspecificaciónInterfaz.mdj  ejercicioEspecificacionOCL.pages
EV/Ejercicios/: realidadVirtual.pages
IC/Trabajo/: .presentacionIC.key.icloud  trabajoIC.pages
PGPI/Visitas/: visitaEveryware.pages  visitaMariaBermudez.pages
SIGE/Teoria/: deepLearning.pages  sentimentAnalysis.pages
TFM/: README.md
TFM/Source code/CircleDetectorHough/: CMakeLists.txt  CircleDetectorHough.cpp  CircleDetectorHough.h  main.cpp
TFM/USITv1.0.3/: Makefile_linux.mak  Makefile_mac.mak  caht  cb  cbc  cr  dct  dctc  gfcf  hd  hdverify  iffp  ko  koc  lg  maskcmp  qsw  wahet
TFM/implementation/: Makefile_mac.mak  harris-laplace
TFM/lip-vireo/: lip-vireo  lip-vireo.conf
TFM/scripts/: S1001L01.keys  S1001L01.pkeys  apply-Descriptor-LipVireo.py  caht.py  calculateSuccess.py  circleHough.py  clahe.py  comparison.py  drawKeypoints.py  feature-extraction.py  gauss.py  harrisCornerDetector.py  matchLowe.py  matching-BruteForce-LipVireo-v2.py  matching-BruteForce-LipVireo.py  matching-BruteForce-ORB.py  matching-BruteForce-SIFT.py  matching-FlannBased-LipVireo.py  matching-FlannBased.py  medianBlur.py  resultFilter-results-BruteForce-SIFT.csv  resultFilter.py  results-BruteForce-LipVireo-hesslap1.csv  results-BruteForce-LipVireo-hesslap6.csv  results-BruteForce-SIFT copia.csv  results-BruteForce-SIFT-dog.csv  results-FlannBased-SIFT.csv  results-FlannBased.csv  results2-BruteForce-ORB.csv  sobel.py  (+7 more)
(+3463 files in other folders)
